
set(DF_BENCHMARK dataframe-benchmark CACHE INTERNAL "")

project(
    ${DF_BENCHMARK}
    VERSION 0.1.0
    DESCRIPTION "dataframe benchmark"
    LANGUAGES CXX
)

file(GLOB_RECURSE DF_BENCHMARK_SOURCES
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
    ${CMAKE_CURRENT_LIST_DIR}/*.h
)

add_executable(${DF_BENCHMARK} ${DF_BENCHMARK_SOURCES})

target_link_libraries(${DF_BENCHMARK} PRIVATE dataframe)

include(${CMAKE_SOURCE_DIR}/cmake/CompilerCheck.cmake)

target_compile_options(${DF_BENCHMARK} PUBLIC
    $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:RELEASE>: ${LIB_DF_REL_BUILD_FLAGS} ${STD_LIB_CPP_FLAGS} ${LIB_DF_REL_WARN_FLAGS}>>
    $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:DEBUG>: ${LIB_DF_DBG_BUILD_FLAGS} ${STD_LIB_CPP_FLAGS} ${LIB_DF_DBG_WARN_FLAGS}>>
)

target_link_options(${DF_BENCHMARK} PUBLIC
    $<$<COMPILE_LANGUAGE:CXX>: ${STD_LIB_CXX_LINKER_FLAGS}>
)

set_target_properties(${DF_BENCHMARK} PROPERTIES
    CXX_STANDARD 23
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
    VERSION ${PROJECT_VERSION}
)
