
set(DF_BENCHMARK dataframe-benchmark CACHE INTERNAL "")

project(
    ${DF_BENCHMARK}
    VERSION 0.1.0
    DESCRIPTION "dataframe benchmark"
    LANGUAGES CXX
)

file(GLOB_RECURSE DF_BENCHMARK_SOURCES
    ${CMAKE_CURRENT_LIST_DIR}/*.cpp
    ${CMAKE_CURRENT_LIST_DIR}/*.h
)

add_executable(${DF_BENCHMARK} ${DF_BENCHMARK_SOURCES})

target_link_libraries(${DF_BENCHMARK} PRIVATE dataframe)

include(../cmake/CompilerCheck.cmake)
include(../cmake/compilerFlags.cmake)

target_compile_options(${DF_BENCHMARK} PRIVATE
    $<$<CONFIG:RELEASE>: ${DF_REL_BUILD_FLAGS} ${DF_STD_LIB_CXX_FLAGS} ${DF_REL_WARN_FLAGS} ${DF_TCMALLOC_FLAGS}>
    $<$<CONFIG:DEBUG>: ${DF_DBG_BUILD_FLAGS} ${DF_STD_LIB_CXX_FLAGS} ${DF_DBG_WARN_FLAGS} ${DF_TCMALLOC_FLAGS}>
)

target_link_options(${DF_BENCHMARK} PRIVATE
    $<$<CONFIG:RELEASE>: -s ${DF_STD_LIB_CXX_LINKER_FLAGS} ${DF_TCMALLOC_LINKER_FLAGS}>
    $<$<CONFIG:DEBUG>: ${DF_STD_LIB_CXX_LINKER_FLAGS} ${DF_TCMALLOC_LINKER_FLAGS}>
)

set_target_properties(${DF_BENCHMARK} PROPERTIES
    CXX_STANDARD 23
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
    VERSION ${PROJECT_VERSION}
)
