
set(DF_EXAMPLE dataframe-example CACHE INTERNAL "")

project(
    ${DF_EXAMPLE}
    VERSION 0.1.0
    DESCRIPTION "dataframe example"
    LANGUAGES CXX
)

file(GLOB_RECURSE DATA_FRAME_EXAMPLE_SOURCES
    ${CMAKE_CURRENT_LIST_DIR}/main-example.cpp
)

add_executable(${DF_EXAMPLE} ${DATA_FRAME_EXAMPLE_SOURCES})

include(${CMAKE_SOURCE_DIR}/cmake/CompilerCheck.cmake)
include(${CMAKE_SOURCE_DIR}/cmake/buildFlags.cmake)

target_compile_options(${DF_EXAMPLE} PRIVATE
    $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:RELEASE>: ${LIB_DF_REL_BUILD_FLAGS} ${STD_LIB_CXX_FLAGS} ${LIB_DF_REL_WARN_FLAGS} ${TCMALLOC_FLAGS}>>
    $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:DEBUG>: ${LIB_DF_DBG_BUILD_FLAGS} ${STD_LIB_CXX_FLAGS} ${LIB_DF_DBG_WARN_FLAGS} ${TCMALLOC_FLAGS}>>
)

target_link_options(${DF_EXAMPLE} PRIVATE
    $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:RELEASE>: -s ${STD_LIB_CXX_LINKER_FLAGS} ${TCMALLOC_LINKER_FLAGS}>>
    $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:DEBUG>: ${STD_LIB_CXX_LINKER_FLAGS} ${TCMALLOC_LINKER_FLAGS}>>
)

target_link_libraries(${DF_EXAMPLE} PRIVATE dataframe)

set_target_properties(${DF_EXAMPLE} PROPERTIES
    CXX_STANDARD 23
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
    VERSION ${PROJECT_VERSION}
)

install(
    TARGETS ${DF_EXAMPLE}
    DESTINATION ${CMAKE_INSTALL_BINDIR}
)
