
set(DF_EXAMPLE dataframe-example CACHE INTERNAL "")

project(
    ${DF_EXAMPLE}
    VERSION 0.1.0
    DESCRIPTION "dataframe example"
    LANGUAGES CXX
)

file(GLOB_RECURSE DATA_FRAME_EXAMPLE_SOURCES
    ${CMAKE_CURRENT_LIST_DIR}/main-example.cpp
)

add_executable(${DF_EXAMPLE} ${DATA_FRAME_EXAMPLE_SOURCES})

include(../cmake/CompilerCheck.cmake)
include(../cmake/compilerFlages.cmake)

target_compile_options(${DF_EXAMPLE} PRIVATE
    $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:RELEASE>: ${DF_LIB_DF_REL_BUILD_FLAGS} ${DF_STD_LIB_CXX_FLAGS} ${DF_LIB_DF_REL_WARN_FLAGS} ${DF_TCMALLOC_FLAGS}>>
    $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:DEBUG>: ${DF_LIB_DF_DBG_BUILD_FLAGS} ${DF_STD_LIB_CXX_FLAGS} ${DF_LIB_DF_DBG_WARN_FLAGS} ${DF_TCMALLOC_FLAGS}>>
)

target_link_options(${DF_EXAMPLE} PRIVATE
    $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:RELEASE>: -s ${DF_STD_LIB_CXX_LINKER_FLAGS} ${DF_TCMALLOC_LINKER_FLAGS}>>
    $<$<COMPILE_LANGUAGE:CXX>:$<$<CONFIG:DEBUG>: ${DF_STD_LIB_CXX_LINKER_FLAGS} ${DF_TCMALLOC_LINKER_FLAGS}>>
)

target_link_libraries(${DF_EXAMPLE} PRIVATE dataframe)

set_target_properties(${DF_EXAMPLE} PROPERTIES
    CXX_STANDARD 23
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
    VERSION ${PROJECT_VERSION}
)

install(
    TARGETS ${DF_EXAMPLE}
    DESTINATION ${CMAKE_INSTALL_BINDIR}
)
